fixed z-index in sortable + modal

--- a/src/less/components/sortable.less
+++ b/src/less/components/sortable.less
@@ -19,7 +19,7 @@
 // Variables
 // ========================================================================
 
-@sortable-dragged-z-index:                      1050;
+@sortable-dragged-z-index:                      @global-z-index + 50;
 
 @sortable-placeholder-opacity:                  0;
 
