--- a/src/less/core/modal.less
+++ b/src/less/core/modal.less
@@ -28,7 +28,7 @@
 // Variables
 // ========================================================================
 
-@modal-z-index:                                 1010;
+@modal-z-index:                                 @global-z-index + 10;
 @modal-background:                              rgba(0,0,0,0.6);
 
 @modal-dialog-margin-vertical:                  50px;
